plugins/org.eclipse.xpand/src/org/eclipse/internal/xpand2/parser/XpandParser.java
// $ANTLR 3.0.1 src/org/eclipse/internal/xpand2/parser/Xpand.g 2009-12-21 07:23:30
 	
package org.eclipse.internal.xpand2.parser; 
	
import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;

import org.antlr.runtime.BaseRecognizer;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.CommonToken;
import org.antlr.runtime.DFA;
import org.antlr.runtime.IntStream;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.eclipse.internal.xpand2.ast.Advice;
import org.eclipse.internal.xpand2.ast.Definition;
import org.eclipse.internal.xpand2.ast.ErrorStatement;
import org.eclipse.internal.xpand2.ast.ExpandStatement;
import org.eclipse.internal.xpand2.ast.ExpressionStatement;
import org.eclipse.internal.xpand2.ast.ExtensionImportDeclaration;
import org.eclipse.internal.xpand2.ast.FileStatement;
import org.eclipse.internal.xpand2.ast.ForEachStatement;
import org.eclipse.internal.xpand2.ast.IfStatement;
import org.eclipse.internal.xpand2.ast.ImportDeclaration;
import org.eclipse.internal.xpand2.ast.LetStatement;
import org.eclipse.internal.xpand2.ast.ProtectStatement;
import org.eclipse.internal.xpand2.ast.Statement;
import org.eclipse.internal.xpand2.ast.Template;
import org.eclipse.internal.xtend.expression.ast.DeclaredParameter;
import org.eclipse.internal.xtend.expression.ast.Expression;
import org.eclipse.internal.xtend.expression.ast.FeatureCall;
import org.eclipse.internal.xtend.expression.ast.GlobalVarExpression;
import org.eclipse.internal.xtend.expression.ast.Identifier;
@SuppressWarnings({"unchecked", "unused", "null"})
public class XpandParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LG", "COMMENT", "TEXT", "StringLiteral", "IntLiteral", "Identifier", "EscapeSequence", "UnicodeEscape", "OctalEscape", "HexDigit", "Letter", "JavaIDDigit", "WS", "ML_COMMENT", "LINE_COMMENT", "RG", "VOCAB", "'IMPORT'", "'EXTENSION'", "'AROUND'", "'('", "','", "'*'", "')'", "'FOR'", "'ENDAROUND'", "'::'", "'DEFINE'", "'ENDDEFINE'", "'-'", "'ERROR'", "'EXPAND'", "'FOREACH'", "'SEPARATOR'", "'FILE'", "'ENDFILE'", "'AS'", "'ITERATOR'", "'ENDFOREACH'", "'IF'", "'ENDIF'", "'ELSEIF'", "'ELSE'", "'LET'", "'ENDLET'", "'PROTECT'", "'CSTART'", "'CEND'", "'ID'", "'DISABLE'", "'ENDPROTECT'", "'let'", "'='", "':'", "'->'", "'?'", "'if'", "'then'", "'else'", "'switch'", "'{'", "'case'", "'default'", "'}'", "'||'", "'&&'", "'implies'", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'+'", "'/'", "'!'", "'.'", "'GLOBALVAR'", "'new'", "'false'", "'true'", "'null'", "'typeSelect'", "'collect'", "'select'", "'selectFirst'", "'reject'", "'exists'", "'notExists'", "'sortBy'", "'forAll'", "'|'", "'Collection'", "'List'", "'Set'", "'['", "']'"
    };
    public static final int IntLiteral=8;
    public static final int Identifier=9;
    public static final int HexDigit=13;
    public static final int WS=16;
    public static final int RG=19;
    public static final int COMMENT=5;
    public static final int StringLiteral=7;
    public static final int LINE_COMMENT=18;
    public static final int JavaIDDigit=15;
    public static final int Letter=14;
    public static final int UnicodeEscape=11;
    public static final int EscapeSequence=10;
    public static final int VOCAB=20;
    public static final int EOF=-1;
    public static final int TEXT=6;
    public static final int OctalEscape=12;
    public static final int ML_COMMENT=17;
    public static final int LG=4;

        public XpandParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[54+1];
         }
        

    @Override
	public String[] getTokenNames() { return tokenNames; }
    @Override
	public String getGrammarFileName() { return "src/org/eclipse/internal/xpand2/parser/Xpand.g"; }


    	private XpandFactory factory;
    	
    	public XpandParser(TokenStream stream, XpandFactory factory) {
    		this(stream);
    		this.factory = factory;
    	}
    	
    	protected Identifier id(Token t) {
    		if (t == null)
    			return null;
    		CommonToken ct = (CommonToken) t;
    		Identifier id = new Identifier(t.getText());
    		id.setStart(ct.getStartIndex());
    		id.setEnd(ct.getStopIndex());
    		id.setLine(ct.getLine());
    		return id;
    	}



    // $ANTLR start template
    // src/org/eclipse/internal/xpand2/parser/Xpand.g:44:1: template returns [Template t] : ( LG ( COMMENT TEXT )* ( (imp= anImport | extimp= anExtensionImport ) TEXT ( COMMENT TEXT )* )* ( (d= define | a= around ) TEXT ( COMMENT TEXT )* )* | );
	public Template template() throws RecognitionException {
        Template t = null;

        ImportDeclaration imp = null;

        ExtensionImportDeclaration extimp = null;

        Definition d = null;

        Advice a = null;


        List imports = new ArrayList(),extensions = new ArrayList(), defines = new ArrayList(), advices = new ArrayList();
        try {
            // src/org/eclipse/internal/xpand2/parser/Xpand.g:45:123: ( LG ( COMMENT TEXT )* ( (imp= anImport | extimp= anExtensionImport ) TEXT ( COMMENT TEXT )* )* ( (d= define | a= around ) TEXT ( COMMENT TEXT )* )* | )
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==LG) ) {
                alt8=1;
            }
            else if ( (LA8_0==EOF) ) {
                alt8=2;
            }
            else {
                if (backtracking>0) {failed=true; return t;}
                NoViableAltException nvae =
                    new NoViableAltException("44:1: template returns [Template t] : ( LG ( COMMENT TEXT )* ( (imp= anImport | extimp= anExtensionImport ) TEXT ( COMMENT TEXT )* )* ( (d= define | a= around ) TEXT ( COMMENT TEXT )* )* | );", 8, 0, input);

                throw nvae;
            }
            switch (alt8) {
                case 1 :
                    // src/org/eclipse/internal/xpand2/parser/Xpand.g:46:2: LG ( COMMENT TEXT )* ( (imp= anImport | extimp= anExtensionImport ) TEXT ( COMMENT TEXT )* )* ( (d= define | a= around ) TEXT ( COMMENT TEXT )* )*
                    {
                    match(input,LG,FOLLOW_LG_in_template47); if (failed) return t;
                    // src/org/eclipse/internal/xpand2/parser/Xpand.g:47:3: ( COMMENT TEXT )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==COMMENT) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // src/org/eclipse/internal/xpand2/parser/Xpand.g:47:4: COMMENT TEXT
                    	    {
                    	    match(input,COMMENT,FOLLOW_COMMENT_in_template52); if (failed) return t;
                    	    match(input,TEXT,FOLLOW_TEXT_in_template54); if (failed) return t;

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);

                    // src/org/eclipse/internal/xpand2/parser/Xpand.g:48:3: ( (imp= anImport | extimp= anExtensionImport ) TEXT ( COMMENT TEXT )* )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( ((LA4_0>=21 && LA4_0<=22)) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // src/org/eclipse/internal/xpand2/parser/Xpand.g:48:4: (imp= anImport | extimp= anExtensionImport ) TEXT ( COMMENT TEXT )*
                    	    {
                    	    // src/org/eclipse/internal/xpand2/parser/Xpand.g:48:4: (imp= anImport | extimp= anExtensionImport )
                    	    int alt2=2;
                    	    int LA2_0 = input.LA(1);

                    	    if ( (LA2_0==21) ) {
                    	        alt2=1;
                    	    }
                    	    else if ( (LA2_0==22) ) {
                    	        alt2=2;
                    	    }
                    	    else {
                    	        if (backtracking>0) {failed=true; return t;}
                    	        NoViableAltException nvae =
                    	            new NoViableAltException("48:4: (imp= anImport | extimp= anExtensionImport )", 2, 0, input);

                    	        throw nvae;
                    	    }
                    	    switch (alt2) {
                    	        case 1 :
                    	            // src/org/eclipse/internal/xpand2/parser/Xpand.g:48:5: imp= anImport
                    	            {
                    	            pushFollow(FOLLOW_anImport_in_template64);
                    	            imp=anImport();
                    	            _fsp--;
                    	            if (failed) return t;
                    	            if ( backtracking==0 ) {
                    	              imports.add(imp);
                    	            }

                    	            }
                    	            break;
                    	        case 2 :
                    	            // src/org/eclipse/internal/xpand2/parser/Xpand.g:48:41: extimp= anExtensionImport
                    	            {
                    	            pushFollow(FOLLOW_anExtensionImport_in_template73);
                    	            extimp=anExtensionImport();
                    	            _fsp--;
                    	            if (failed) return t;
                    	            if ( backtracking==0 ) {
                    	              extensions.add(extimp);
                    	            }

                    	            }
                    	            break;

                    	    }

                    	    match(input,TEXT,FOLLOW_TEXT_in_template78); if (failed) return t;
                    	    // src/org/eclipse/internal/xpand2/parser/Xpand.g:48:98: ( COMMENT TEXT )*
                    	    loop3:
                    	    do {
                    	        int alt3=2;
                    	        int LA3_0 = input.LA(1);

                    	        if ( (LA3_0==COMMENT) ) {
                    	            alt3=1;
                    	        }


                    	        switch (alt3) {
                    	    	case 1 :
                    	    	    // src/org/eclipse/internal/xpand2/parser/Xpand.g:48:99: COMMENT TEXT
                    	    	    {
                    	    	    match(input,COMMENT,FOLLOW_COMMENT_in_template81); if (failed) return t;
                    	    	    match(input,TEXT,FOLLOW_TEXT_in_template83); if (failed) return t;

                    	    	    }
                    	    	    break;

                    	    	default :
                    	    	    break loop3;
                    	        }
                    	    } while (true);


                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);

                    // src/org/eclipse/internal/xpand2/parser/Xpand.g:49:3: ( (d= define | a= around ) TEXT ( COMMENT TEXT )* )*
                    loop7:
                    do {
                        int alt7=2;
                        int LA7_0 = input.LA(1);

                        if ( (LA7_0==23||LA7_0==31) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                    	case 1 :
                    	    // src/org/eclipse/internal/xpand2/parser/Xpand.g:49:4: (d= define | a= around ) TEXT ( COMMENT TEXT )*
                    	    {
                    	    // src/org/eclipse/internal/xpand2/parser/Xpand.g:49:4: (d= define | a= around )
                    	    int alt5=2;
                    	    int LA5_0 = input.LA(1);

                    	    if ( (LA5_0==31) ) {
                    	        alt5=1;
                    	    }
                    	    else if ( (LA5_0==23) ) {
                    	        alt5=2;
                    	    }
                    	    else {
                    	        if (backtracking>0) {failed=true; return t;}
                    	        NoViableAltException nvae =
                    	            new NoViableAltException("49:4: (d= define | a= around )", 5, 0, input);

                    	        throw nvae;
                    	    }
                    	    switch (alt5) {
                    	        case 1 :
                    	            // src/org/eclipse/internal/xpand2/parser/Xpand.g:49:5: d= define
                    	            {
                    	            pushFollow(FOLLOW_define_in_template95);
                    	            d=define();
                    	            _fsp--;
                    	            if (failed) return t;
                    	            if ( backtracking==0 ) {
                    	              defines.add(d);
                    	            }

                    	            }
                    	            break;
                    	        case 2 :
                    	            // src/org/eclipse/internal/xpand2/parser/Xpand.g:49:33: a= around
                    	            {
                    	            pushFollow(FOLLOW_around_in_template102);
                    	            a=around();
                    	            _fsp--;
                    	            if (failed) return t;
                    	            if ( backtracking==0 ) {
                    	              advices.add(a);
                    	            }

                    	            }
                    	            break;

                    	    }

                    	    match(input,TEXT,FOLLOW_TEXT_in_template106); if (failed) return t;
                    	    // src/org/eclipse/internal/xpand2/parser/Xpand.g:49:65: ( COMMENT TEXT )*
                    	    loop6:
                    	    do {
                    	        int alt6=2;
                    	        int LA6_0 = input.LA(1);

                    	        if ( (LA6_0==COMMENT) ) {
                    	            alt6=1;
                    	        }


                    	        switch (alt6) {
                    	    	case 1 :
                    	    	    // src/org/eclipse/internal/xpand2/parser/Xpand.g:49:66: COMMENT TEXT
                    	    	    {
                    	    	    match(input,COMMENT,FOLLOW_COMMENT_in_template109); if (failed) return t;
                    	    	    match(input,TEXT,FOLLOW_TEXT_in_template111); if (failed) return t;

                    	    	    }
                    	    	    break;

                    	    	default :
                    	    	    break loop6;
                    	        }
                    	    } while (true);


                    	    }
                    	    break;

                    	default :
                    	    break loop7;
                        }
                    } while (true);

                    if ( backtracking==0 ) {
                      t = factory.createTemplate(imports,extensions,defines,advices);
                    }

                    }
                    break;
                case 2 :
                    // src/org/eclipse/internal/xpand2/parser/Xpand.g:52:1: 
                    {
                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return t;
    }
    // $ANTLR end template


    // $ANTLR start anImport
    // src/org/eclipse/internal/xpand2/parser/Xpand.g:54:1: anImport returns [ImportDeclaration imp] : 'IMPORT' id= simpleType ;
    public ImportDeclaration anImport() throws RecognitionException {
        ImportDeclaration imp = null;

        Identifier id = null;


        try {
            // src/org/eclipse/internal/xpand2/parser/Xpand.g:54:42: ( 'IMPORT' id= simpleType )
            // src/org/eclipse/internal/xpand2/parser/Xpand.g:55:2: 'IMPORT' id= simpleType
            {
            match(input,21,FOLLOW_21_in_anImport137); if (failed) return imp;
            pushFollow(FOLLOW_simpleType_in_anImport141);
            id=simpleType();
            _fsp--;
            if (failed) return imp;
            if ( backtracking==0 ) {
              imp = factory.createImportDeclaration(id);
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return imp;
    }
    // $ANTLR end anImport


    // $ANTLR start anExtensionImport
    // src/org/eclipse/internal/xpand2/parser/Xpand.g:58:1: anExtensionImport returns [ExtensionImportDeclaration imp] : 'EXTENSION' id= simpleType ;
    public ExtensionImportDeclaration anExtensionImport() throws RecognitionException {
        ExtensionImportDeclaration imp = null;

        Identifier id = null;


        try {
            // src/org/eclipse/internal/xpand2/parser/Xpand.g:58:59: ( 'EXTENSION' id= simpleType )
            // src/org/eclipse/internal/xpand2/parser/Xpand.g:59:2: 'EXTENSION' id= simpleType
            {
            match(input,22,FOLLOW_22_in_anExtensionImport156); if (failed) return imp;
            pushFollow(FOLLOW_simpleType_in_anExtensionImport160);
            id=simpleType();
            _fsp--;
            if (failed) return imp;
            if ( backtracking==0 ) {
              imp = factory.createExtensionImportDeclaration(id);
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return imp;
    }
    // $ANTLR end anExtensionImport


    // $ANTLR start around
    // src/org/eclipse/internal/xpand2/parser/Xpand.g:62:1: around returns [Advice a] : 'AROUND' pc= pointcut ( '(' (p= declaredParameterList ( ',' wildparams= '*' )? | wildparams= '*' ) ')' )? 'FOR' t= type s= sequence 'ENDAROUND' ;
    public Advice around() throws RecognitionException {
        Advice a = null;

        Token wildparams=null;
        Identifier pc = null;

        List<DeclaredParameter> p = null;

        Identifier t = null;

        List<Statement> s = null;


        try {
            // src/org/eclipse/internal/xpand2/parser/Xpand.g:62:27: ( 'AROUND' pc= pointcut ( '(' (p= declaredParameterList ( ',' wildparams= '*' )? | wildparams= '*' ) ')' )? 'FOR' t= type s= sequence 'ENDAROUND' )
            // src/org/eclipse/internal/xpand2/parser/Xpand.g:63:4: 'AROUND' pc= pointcut ( '(' (p= declaredParameterList ( ',' wildparams= '*' )? | wildparams= '*' ) ')' )? 'FOR' t= type s= sequence 'ENDAROUND'
            {
            match(input,23,FOLLOW_23_in_around178); if (failed) return a;
            pushFollow(FOLLOW_pointcut_in_around182);
            pc=pointcut();
            _fsp--;
            if (failed) return a;
            // src/org/eclipse/internal/xpand2/parser/Xpand.g:64:4: ( '(' (p= declaredParameterList ( ',' wildparams= '*' )? | wildparams= '*' ) ')' )?
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==24) ) {
                alt11=1;
            }
            switch (alt11) {
                case 1 :
                    // src/org/eclipse/internal/xpand2/parser/Xpand.g:64:5: '(' (p= declaredParameterList ( ',' wildparams= '*' )? | wildparams= '*' ) ')'
                    {
                    match(input,24,FOLLOW_24_in_around188); if (failed) return a;
                    // src/org/eclipse/internal/xpand2/parser/Xpand.g:64:9: (p= declaredParameterList ( ',' wildparams= '*' )? | wildparams= '*' )
                    int alt10=2;
                    int LA10_0 = input.LA(1);

                    if ( (LA10_0==Identifier||(LA10_0>=96 && LA10_0<=98)) ) {
                        alt10=1;
                    }
                    else if ( (LA10_0==26) ) {
                        alt10=2;
                    }
                    else {
                        if (backtracking>0) {failed=true; return a;}
                        NoViableAltException nvae =
                            new NoViableAltException("64:9: (p= declaredParameterList ( ',' wildparams= '*' )? | wildparams= '*' )", 10, 0, input);

                        throw nvae;
                    }
                    switch (alt10) {
                        case 1 :
                            // src/org/eclipse/internal/xpand2/parser/Xpand.g:64:10: p= declaredParameterList ( ',' wildparams= '*' )?
                            {
                            pushFollow(FOLLOW_declaredParameterList_in_around193);
                            p=declaredParameterList();
                            _fsp--;
                            if (failed) return a;
                            // src/org/eclipse/internal/xpand2/parser/Xpand.g:64:34: ( ',' wildparams= '*' )?
                            int alt9=2;
                            int LA9_0 = input.LA(1);
